--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@ Download
           <p>Pebbles, New York</p>
           <div class="container">
             <div class="row">
-          <div class="col-3 col-sm-12 col-lg-3">
+          <div class="col-sm-12 col-lg-3">
             <img src="./images/techcrunch.png" height="30"/>
           </div>
-          <div class="col-3 col-sm-12 col-lg-3">
+          <div class="col-sm-12 col-lg-3">
             <img src="./images/mashable.png"height="30"/>
           </div>
-          <div class="col-3 col-sm-12 col-lg-3">
+          <div class="col-sm-12 col-lg-3">
             <img src="./images/bizinsider.png"height="30"/>
           </div>
-          <div class="col-3 col-sm-12 col-lg-3">
+          <div class="col-sm-12 col-lg-3">
           <img src="./images/tnw.png"height="30"/>
           </div>
         </div>
